# -alculator

./: .clang-format  CMakeLists.txt  Calculator-team-8.sln  Calculator-team-8.vcxproj  Source.cpp  functions.cpp  functions.h  head.txt  help.txt  inputFile.h  testCalculator.cpp
Calculator-team-8/: Calculator-team-8.vcxproj  Calculator-team-8.vcxproj.filters  Source.cpp  Source.h
Test/: Test.vcxproj  test.cpp
Test/x64/Debug/: Test.exe.recipe  Test.vcxproj.FileListAbsolute.txt
Test/x64/Debug/Test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  Test.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
